--- a/rss-feed.html
+++ b/rss-feed.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta charset="utf-8" />
   <title>Rss Feed Loader</title>
   <meta name="author" content="luksurious">
   <meta name="description" content="load the title of an rss feed entry" />
-  <script type='text/javascript' src="http://meemoo.org/meemoo/v1/meemoo-min.js"></script>
+  <script type='text/javascript' src="http://meemoo.org/meemoo/v1/meemoo.js"></script>
   <script type='text/javascript' src="http://www.google.com/jsapi"></script>
   <style type='text/css'>
     html, body {
@@ -23,7 +23,6 @@
   
 <script type='text/javascript'>
 
-(function(Meemoo) {
     var loaded =  false;
     var textElement = document.getElementById('text-preview');
     var urlElement = document.getElementById('rss-url');
@@ -42,7 +41,8 @@
     }
 
     var send = function(){
-        Meemoo.send("string", textElement.value);
+		var text = textElement.value;
+        Meemoo.send("string", text);
     }
     
     var loadRss = function() {
@@ -118,7 +118,6 @@
           type: "string"
         }
     });
-})(Meemoo);
 </script>
 </body>
 
