some better labels for the ui

--- a/rss-feed.html
+++ b/rss-feed.html
@@ -17,9 +17,9 @@
   </style>
 </head>
 <body>
-    <input type="text" id="rss-url"><br>
-    <a href="#" id="load-rss-link">load</a><br>
-    <textarea readonly="readonly" id="text-preview"></textarea>
+    <input type="text" id="rss-url" placeholder="rss feed url"><br>
+    <a href="#" id="load-rss-link">load rss feed</a><br>
+    <textarea readonly="readonly" id="text-preview" placeholder="preview"></textarea>
   
 <script type='text/javascript'>
 
