changing the send method to text

--- a/rss-feed.html
+++ b/rss-feed.html
@@ -42,7 +42,7 @@
     }
 
     var send = function(){
-        Meemoo.send("string", textElement.value);
+        Meemoo.send("text", textElement.value);
     }
     
     var loadRss = function() {
